--- a/modules/dataset/files/html/other_index.html
+++ b/modules/dataset/files/html/other_index.html
@@ -20,6 +20,7 @@
 			<a href="mediatitles">Titles of all files (namespace 6) on each wiki, daily</a><br />
 			<a href="pagetitles">Titles of all articles (namespace 0) on each wiki, daily</a><br />
 			<a href="kiwix/zim/">Static dumps of wiki projects in OpenZim format (mirrored from Kiwix)</a><br />
+			<a href="globalblocks/">Central Auth globalblocks table</a><br />
 			<a href="surveys">WMF Survey data</a><br />
 			<a href="poty/">Picture of the Year Zip or GZ files</a><br/>
 			<a href="wikichallenge/">The top 6 submissions of the WikiChallenge data competition, contains source and data</a><br />
