Add categories RDF dump into the index page
Bug: T173892
Change-Id: I84accad4cb25f9bafbb6ef015c638425672e884b

--- a/modules/dataset/files/html/other_index.html
+++ b/modules/dataset/files/html/other_index.html
@@ -34,6 +34,7 @@
 			<a href="wikitech/">Dumps of images and content of wikitech.wikimedia.org</a><br />
 			<a href="/other/contenttranslation/">Content Translation dumps in json and tmx format</a><br />
 			<a href="/other/testfiles">XML or other files for testing use</a><br />
+			<a href="/other/categoriesrdf">Mediawiki categories as RDF</a><br />
 			<div class="visualClear"></div>
 		</div>
 	</div>
