--- a/modules/profile/files/discovery_dashboards/index.html
+++ b/modules/profile/files/discovery_dashboards/index.html
@@ -106,6 +106,11 @@
         Dashboard for digging into search-engine-referred traffic. (<a href="https://phabricator.wikimedia.org/diffusion/WDWO/">Code Repository</a>)
       </p>
 
+      <h3><a href = "./forecasts/">Daily Forecasts</a></h3>
+      <p class="caption">
+        Dashboard for viewing predicted Search Platform and Wikidata Query Service metrics. (<a href="https://phabricator.wikimedia.org/diffusion/WDDE/">Code Repository</a>)
+      </p>
+
     </div>
     <div id="info">
 
@@ -125,7 +130,7 @@
       <p>We wrote an article to help you do that! :D Head over to <em><a href="https://wikitech.wikimedia.org/wiki/Building_a_Shiny_Dashboard">Building a Shiny Dashboard</a></em> on Wikitech. To make the ops side of things easier, we've developed the <a href="https://github.com/wikimedia/puppet/tree/production/modules/shiny_server">Shiny Server module</a> for Puppet. See <a href="https://github.com/wikimedia/puppet/tree/production/modules/profile/manifests/discovery_dashboards">these profiles</a> for further reference. If you have other questions or would like further assistance, please <a href="mailto:mpopov@wikimedia.org">Mikhail</a> or <a href="mailto:cxie@wikimedia.org">Chelsy</a>.</p>
 
     </div>
-    
+
     <div id="footer">This page is available under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike License</a>. All the dashboards' code is available under the <a href="https://opensource.org/licenses/MIT">MIT License</a>.</div>
 
   </div>
