Update dumps archive_index.html for the files I just uploaded
Change-Id: I6e87761939d8769046ceee062b1628ab28cfe091

--- a/modules/dumps/files/web/html/archive_index.html
+++ b/modules/dumps/files/web/html/archive_index.html
@@ -23,6 +23,7 @@
 	 when they were created.  Happy perusing!
        </p>
        <a href="2001/">2001 (UseModWiki) tarballs of the directory</a><br />
+       <a href="2001-xml/">2001 (UseModWiki) dump converted to MediaWiki XML</a></br />
        <a href="2002/">2002 (UseModWiki) tarballs of the directory</a><br />
        <a href="2003/">2003 (phpwiki?) dumps of sql tables</a><br />
        <a href="2005/">2005 (MediaWiki 1.5?) XML files, warning: old schema!</a><br />
